SK-606: unsaved service endpoint (#1153)

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -911,6 +911,9 @@
   "view_DidEndpointsForm_id": {
     "message": "Service ID"
   },
+  "view_DidEndpointsForm_unsaved": {
+    "message": "Clicking OK will cause unsaved form data to be lost"
+  },
   "view_DidEndpointsForm_tooMany": {
     "message": "You cannot add any more service endpoints"
   },
