--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -914,6 +914,9 @@
   "view_DidManage_endpoints": {
     "message": "Service endpoints"
   },
+  "view_DidManage_web3name": {
+    "message": "Create web3name"
+  },
   "view_DidManage_downgrade": {
     "message": "Remove on-chain DID"
   },
