--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -1076,5 +1076,20 @@
   },
   "view_CreatePresentation_download": {
     "message": "Download"
+  },
+  "view_W3NCreateInfo_heading": {
+    "message": "web3name"
+  },
+  "view_W3NCreateInfo_subline": {
+    "message": "Connect a web3name to your on-chain DID"
+  },
+  "view_W3NCreateInfo_info": {
+    "message": "Web3names are user-friendly names built on top of the KILT blockchain. With your on-chain DID, you can claim this alias which makes it easier for others to reference your identity, without the need to triple-check the DID’s long sequence of characters."
+  },
+  "view_W3NCreateInfo_warning": {
+    "message": "You need an on-chain DID to use this feature."
+  },
+  "view_W3NCreateInfo_upgradeCTA": {
+    "message": "Upgrade to on-chain DID"
   }
 }
