--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -1091,5 +1091,28 @@
   },
   "view_W3NCreateInfo_upgradeCTA": {
     "message": "Upgrade to on-chain DID"
+  },
+  "view_W3NCreateForm_heading": {
+    "message": "web3name"
+  },
+  "view_W3NCreateForm_subline": {
+    "message": "Connect a web3name to your on-chain DID"
+  },
+  "view_W3NCreateForm_info": {
+    "message": "Please choose a unique web3name.\nUse only these characters for your web3name:\nlowercase a to z, 0 to 9, “-”, “_” and “.”"
+  },
+  "view_W3NCreateForm_placeholder": {
+    "message": "choose a unique web3name"
+  },
+  "view_W3NCreateForm_unexpected": {
+    "message": "“$character$” is not a supported character",
+    "placeholders": {
+      "character": {
+        "content": "$1"
+      }
+    }
+  },
+  "view_W3NCreateForm_taken": {
+    "message": "Too late, this web3name is already taken"
   }
 }
