--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -914,6 +914,9 @@
   "view_DidManage_endpoints": {
     "message": "Service endpoints"
   },
+  "view_DidManage_web3name": {
+    "message": "Create web3name"
+  },
   "view_DidManage_downgrade": {
     "message": "Remove on-chain DID"
   },
@@ -1073,5 +1076,94 @@
   },
   "view_CreatePresentation_download": {
     "message": "Download"
+  },
+  "view_W3NCreateInfo_heading": {
+    "message": "web3name"
+  },
+  "view_W3NCreateInfo_subline": {
+    "message": "Connect a web3name to your on-chain DID"
+  },
+  "view_W3NCreateInfo_info": {
+    "message": "Web3names are user-friendly names built on top of the KILT blockchain. With your on-chain DID, you can claim this alias which makes it easier for others to reference your identity, without the need to triple-check the DID’s long sequence of characters."
+  },
+  "view_W3NCreateInfo_warning": {
+    "message": "You need an on-chain DID to use this feature."
+  },
+  "view_W3NCreateInfo_upgradeCTA": {
+    "message": "Upgrade to on-chain DID"
+  },
+  "view_W3NCreateForm_heading": {
+    "message": "web3name"
+  },
+  "view_W3NCreateForm_subline": {
+    "message": "Connect a web3name to your on-chain DID"
+  },
+  "view_W3NCreateForm_info": {
+    "message": "Please choose a unique web3name.\nUse only these characters for your web3name:\nlowercase a to z, 0 to 9, “-”, “_” and “.”"
+  },
+  "view_W3NCreateForm_placeholder": {
+    "message": "choose a unique web3name"
+  },
+  "view_W3NCreateForm_short": {
+    "message": "You need to use at least $minimum$ characters",
+    "placeholders": {
+      "minimum": {
+        "content": "$1"
+      }
+    }
+  },
+  "view_W3NCreateForm_long": {
+    "message": "You may use at most $maximum$ characters",
+    "placeholders": {
+      "maximum": {
+        "content": "$1"
+      }
+    }
+  },
+  "view_W3NCreateForm_unexpected": {
+    "message": "“$character$” is not a supported character",
+    "placeholders": {
+      "character": {
+        "content": "$1"
+      }
+    }
+  },
+  "view_W3NCreateForm_taken": {
+    "message": "Too late, this web3name is already taken"
+  },
+  "view_W3NCreateSign_heading": {
+    "message": "web3name"
+  },
+  "view_W3NCreateSign_subline": {
+    "message": "Connect a web3name to your on-chain DID"
+  },
+  "view_W3NCreateSign_pending": {
+    "message": "Create web3name is being processed"
+  },
+  "view_W3NCreateSign_success": {
+    "message": "Create web3name was successful"
+  },
+  "view_W3NCreateSign_error": {
+    "message": "Create web3name failed"
+  },
+  "view_W3NCreateSign_total": {
+    "message": "Total cost: "
+  },
+  "view_W3NCreateSign_deposit": {
+    "message": " Deposit "
+  },
+  "view_W3NCreateSign_fee": {
+    "message": " + fee "
+  },
+  "view_W3NCreateSign_label": {
+    "message": "web3name: "
+  },
+  "view_W3NCreateSign_insufficientFunds": {
+    "message": "You need at least $cost$ KILTs to create the web3name",
+    "placeholders": {
+      "cost": {
+        "content": "$1"
+      }
+    }
   }
 }
