SK-866: deposit explainers: dot

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -1159,7 +1159,7 @@
     "message": " + fee "
   },
   "view_W3NCreateSign_explainer": {
-    "message": "To store your web3name on the blockchain, a deposit needs to be reserved. The deposit will be refunded if you remove your web3name"
+    "message": "To store your web3name on the blockchain, a deposit needs to be reserved. The deposit will be refunded if you remove your web3name."
   },
   "view_W3NCreateSign_label": {
     "message": "web3name: "
