--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -300,6 +300,9 @@
   "component_LegacyDids_dids": {
     "message": "DIDs that need updating:"
   },
+  "component_ExplainerModal_show": {
+    "message": "Information"
+  },
   "view_Welcome_heading": {
     "message": "Welcome to your Sporran"
   },
@@ -1175,6 +1178,9 @@
   },
   "view_W3NCreateSign_fee": {
     "message": " + fee "
+  },
+  "view_W3NCreateSign_explainer": {
+    "message": "To store your web3name on the blockchain, a deposit needs to be reserved. The deposit will be refunded if you remove your web3name."
   },
   "view_W3NCreateSign_label": {
     "message": "web3name: "
