--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -1192,5 +1192,29 @@
         "content": "$1"
       }
     }
+  },
+  "view_W3NCreatePromo_heading": {
+    "message": "web3name"
+  },
+  "view_W3NCreatePromo_subline": {
+    "message": "Connect a web3name to your on-chain DID"
+  },
+  "view_W3NCreatePromo_pending": {
+    "message": "Create web3name is being processed"
+  },
+  "view_W3NCreatePromo_success": {
+    "message": "Create web3name was successful"
+  },
+  "view_W3NCreatePromo_error": {
+    "message": "Create web3name failed"
+  },
+  "view_W3NCreatePromo_total": {
+    "message": "Total cost: "
+  },
+  "view_W3NCreatePromo_label": {
+    "message": "web3name: "
+  },
+  "view_W3NCreatePromo_info": {
+    "message": "Free for you due to BTE promo"
   }
 }
