--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -1257,5 +1257,23 @@
   },
   "view_W3NRemove_explanation": {
     "message": "Please note: if you remove your web3name, it can be claimed by someone else."
+  },
+  "view_SignDidExtrinsic_from": {
+    "message": "from"
+  },
+  "view_SignDidExtrinsic_method": {
+    "message": "method data"
+  },
+  "view_SignDidExtrinsic_title": {
+    "message": "Sign with on-chain DID"
+  },
+  "view_SignDidExtrinsic_subline": {
+    "message": "Select your Identity and sign with your password"
+  },
+  "view_SignDidExtrinsic_reject": {
+    "message": "Reject"
+  },
+  "view_SignDidExtrinsic_error": {
+    "message": "You need to upgrade to an on-chain DID first"
   }
 }
