--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -870,7 +870,7 @@
     "message": "Total cost: "
   },
   "view_DidUpgradePromo_info": {
-    "message": "Free for you due to BTE promo"
+    "message": "Free for you due to web3name promo"
   },
   "view_DidUpgradePromo_pending": {
     "message": "Upgrade to on-chain is being processed"
@@ -929,7 +929,10 @@
     "message": "To store your DID on the blockchain, a deposit needs to be reserved. The deposit will be refunded if you remove your on-chain DID."
   },
   "view_DidUpgradeExplainer_promo": {
-    "message": "Use BTE promo"
+    "message": "Use web3name Promo and accept "
+  },
+  "view_DidUpgradeExplainer_terms": {
+    "message": "Terms"
   },
   "view_DidUpgradeExplainer_CTA": {
     "message": "Upgrade"
@@ -1130,6 +1133,12 @@
   "view_W3NCreateInfo_warning": {
     "message": "You need an on-chain DID to use this feature."
   },
+  "view_W3NCreateInfo_promo": {
+    "message": "Use web3name Promo and accept "
+  },
+  "view_W3NCreateInfo_terms": {
+    "message": "Terms"
+  },
   "view_W3NCreateInfo_upgradeCTA": {
     "message": "Upgrade to on-chain DID"
   },
@@ -1232,7 +1241,7 @@
     "message": "web3name: "
   },
   "view_W3NCreatePromo_info": {
-    "message": "Free for you due to BTE promo"
+    "message": "Free for you due to web3name promo"
   },
   "view_W3NRemove_heading": {
     "message": "Remove web3name"
