--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -91,7 +91,7 @@
     "message": "Add"
   },
   "component_AddIdentity_create": {
-    "message": "Create new Identity"
+    "message": "Add Identity"
   },
   "component_AddIdentity_importCredentials": {
     "message": "Import credentials"
