--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -633,7 +633,7 @@
     "message": "Attester"
   },
   "view_SignQuote_on_chain_did_deleted": {
-    "message": "On-chain DID deleted, please select a different Identity."
+    "message": "On-chain DID deleted, please select a different Identity"
   },
   "view_SignQuote_CTA": {
     "message": "Request Attestation"
