--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -1030,6 +1030,17 @@
   "view_DidEndpointsForm_formatID": {
     "message": "Please use letters from A to Z and numbers from 0 through 9"
   },
+  "view_DidEndpointsForm_tooLong": {
+    "message": "This string is $current$ bytes; the maximum allowed is $maximum$.",
+    "placeholders": {
+      "current": {
+        "content": "$1"
+      },
+      "maximum": {
+        "content": "$2"
+      }
+    }
+  },
   "view_DidEndpointsSign_heading_add": {
     "message": "Add Service Endpoint"
   },
