SK-842: Allow service endpoint extrinsic signing (#1402)

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -1358,7 +1358,31 @@
   "view_SignDidExtrinsic_reject": {
     "message": "Reject"
   },
-  "view_SignDidExtrinsic_error": {
+  "view_SignDidExtrinsic_error_light_did": {
     "message": "You need to upgrade to an on-chain DID first"
+  },
+  "view_SignDidExtrinsic_error_forbidden": {
+    "message": "This DID call is forbidden"
+  },
+  "view_SignDidExtrinsic_endpoint_title_add": {
+    "message": "Add Service Endpoint"
+  },
+  "view_SignDidExtrinsic_endpoint_title_remove": {
+    "message": "Remove Service Endpoint"
+  },
+  "view_SignDidExtrinsic_endpoint_subline": {
+    "message": "Sign with your password"
+  },
+  "view_SignDidExtrinsic_endpoint_url": {
+    "message": "URL"
+  },
+  "view_SignDidExtrinsic_endpoint_type": {
+    "message": "Type"
+  },
+  "view_SignDidExtrinsic_endpoint_id": {
+    "message": "Service ID"
+  },
+  "view_SignDidExtrinsic_endpoint_remove_error": {
+    "message": "No service endpoint found for DID"
   }
 }
