SK-818: Refactor UnlockVestedFunds and show fee (#1421)

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -828,11 +828,19 @@
   "view_UnlockVestedFunds_subline": {
     "message": "Update transaction for releasing unlocked coins"
   },
+  "view_UnlockVestedFunds_fee": {
+    "message": "Fee: "
+  },
   "view_UnlockVestedFunds_explanation": {
     "message": "Your unlocked vested coins need to be released manually. Sign this transaction to release the coins to your transferable balance. A fee is required."
   },
   "view_UnlockVestedFunds_insufficient_funds": {
-    "message": "You don’t have enough usable balance to make this transaction"
+    "message": "You need at least $cost$ KILTs to pay the fee",
+    "placeholders": {
+      "cost": {
+        "content": "$1"
+      }
+    }
   },
   "view_UnlockVestedFunds_CTA": {
     "message": "Update Balance"
