--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -1072,20 +1072,53 @@
   "view_SignDid_title": {
     "message": "Sign with on-chain DID"
   },
-  "view_SignDid_subline": {
-    "message": "Select your Identity and sign with your password"
-  },
   "view_SignDid_origin": {
     "message": "Request from:"
   },
   "view_SignDid_plaintext": {
     "message": "Data to be signed:"
   },
+  "view_SignDid_credential": {
+    "message": "Credential:"
+  },
+  "view_SignDid_credentials": {
+    "message": "Credentials:"
+  },
   "view_SignDid_reject": {
     "message": "Reject"
   },
-  "view_SignDid_error": {
+  "view_SignDidStart_title": {
+    "message": "Sign with on-chain DID"
+  },
+  "view_SignDidStart_subline": {
+    "message": "Select your Identity and sign with your password"
+  },
+  "view_SignDidStart_info_did": {
+    "message": "To proceed you need an on-chain DID."
+  },
+  "view_SignDidStart_info_credentials": {
+    "message": "Choose whether to attach your credentials to the signature, or sign without credentials."
+  },
+  "view_SignDidStart_with_credentials": {
+    "message": "Sign with credentials"
+  },
+  "view_SignDidStart_without_credentials": {
+    "message": "Sign without credentials"
+  },
+  "view_SignDidStart_error_did": {
     "message": "You need to upgrade to an on-chain DID first"
+  },
+  "view_SignDidStart_error_credentials": {
+    "message": "This identity has no attested credentials"
+  },
+  "view_SignDidCredentialsSelect_heading": {
+    "message": "Select Credentials"
+  },
+  "view_SignDidCredentialsSelect_subline": {
+    "message": "Select credentials to attach to your signature"
+  },
+  "view_SignDidCredentialsSelect_next": {
+    "message": "Next"
   },
   "view_ImportCredentials_title": {
     "message": "Import Credentials"
