add extra button navigating to linking page

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -978,6 +978,9 @@
   "view_DidManage_heading": {
     "message": "Manage DID"
   },
+  "view_DidManage_linking": {
+    "message": "Linking accounts"
+  },
   "view_DidManage_endpoints": {
     "message": "Service endpoints"
   },
